# python-package-template

./: .gitignore  LICENSE  README.md  _conf.py  _quickstart.py  _rename.py  docs-format.sh  docs-generate.sh  mkdocs.sh  pyproject.toml  pytest.ini  setup.py
.github/workflows/: execute_python_package.yml  python-package.yml  upload_python_package.yml
docker/: README.md
lib/: cli.py
lib/utils/: _exceptions.py  _path.py
src/: conf.py  index.rst
src/_static/: custom.css  custom.js
tests/: _generate_all_templates.py  conftest.py
{{ MODULE_NAME }}/: __init__.py  __meta__.py  cli.py
{{ MODULE_NAME }}/cli/: __init__.py
{{ MODULE_NAME }}/utils/: __init__.py  _exceptions.py  _path.py  _warnings.py  argparse_utils.py  generic_utils.py
